[package]
name = "uwuwify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = { version = "0.2", optional = true }

[features]
bin = ["atty"]

[[bin]]
name = "uwuwify"
path = "src/main.rs"
required-features = ["bin"]
